Update report (tex references)

--- a/design-docs/Report.tex
+++ b/design-docs/Report.tex
@@ -895,6 +895,7 @@ Finally, the changes are written to the file (if specified by the `writeToFile')
 \subsection{Code references}
 \label{sec:CodeReferences}
 csar has reused some code, or ideas from external sources within its code. They are listed below:
+
 \begin{itemize}
   \item Ignore files syntax - \url{https://git-scm.com/docs/gitignore} and \url{https://github.com/EE/gitignore-to-glob/blob/master/lib/gitignore-to-glob.js}
   \item Test cases for ignore files - \url{https://www.atlassian.com/git/tutorials/gitignore}
@@ -914,6 +915,16 @@ Gradle is configured through scripts, the following references were used to help
 \begin{itemize}
   \item ANTLR process settings in `build.gradle' - \url{https://docs.gradle.org/4.0.1/userguide/antlr\_plugin.html\#sec:controlling\_the\_antlr\_generator\_process}
   \item JaCoCo in `build.gradle' - \url{http://www.jworks.nl/2013/06/03/jacoco-code-coverage-with-gradle/}
+\end{itemize}
+
+\subsection{TeX references}
+A majority of this document was written using TeX, the following references were used to help create them. They are listed below:
+
+\begin{itemize}
+  \item Code blocks - \url{https://stackoverflow.com/a/3175141}
+  \item Line spacing - \url{https://tex.stackexchange.com/questions/373555/1-5-spacing-with-baselinestretch}
+  \item Font (Sans Serif) - \url{https://tex.stackexchange.com/questions/2095/simplest-way-to-typeset-entire-document-in-sans-serif-helvetica}
+  \item Single-sided document - \url{https://www.sharelatex.com/learn/Single_sided_and_double_sided_documents}
 \end{itemize}
 
 % Testing
